--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.26",
+    "expo-dev-client": "~4.0.22",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.21",
