--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
